# cxx-go-cgo

./: .gitignore  LICENSE  README.md
doc/: 00-学习资料.md  00-常见问题.md  01-go-start资料.md  01-运行机制.md  02-基础概念与执行.md  03-命令工具链.md  03-开发环境.md  04-依赖包管理.md  05-cgo.md  06-goroutine.md
examples/cgo-base/: build.sh
examples/cgo-cxx/: build.sh
examples/cgo-cxx/src/: CMakeLists.txt
examples/cgo-cxx/src/base/: base_type.c  base_type.cpp  base_type.h  base_type.hpp  macros.h
examples/cgo-cxx/src/base/array/: array_type.cpp  array_type.h
examples/cgo-cxx/src/base/class/: enum_def.h
examples/cgo-cxx/src/base/struct/: struct_a.cpp  struct_a.h
examples/cgo-cxx/src/cBase/: CMakeLists.txt
examples/cgo-cxx/src/cBase/c_array/: array_type.c  array_type.h
examples/cgo-cxx/src/cBase/c_base/: base_type.h
examples/cgo-cxx/src/cBase/c_struct/: vec_struct.c  vec_struct.h
examples/cgo-cxx/src/cxxBase/: CMakeLists.txt
examples/cgo-cxx/src/cxxBase/c_api/: c_api.h
examples/cgo-cxx/src/cxxBase/cls_a/: class_a.cpp  class_a.h
examples/cgo-cxx/src/cxxBase/cls_setting/: setting.cpp  setting.hpp
examples/cgo-cxx/src/cxxBase/cls_user/: user_info.cpp  user_info.hpp  user_info_enum.hpp
examples/cgo-cxx/src/cxxBase/cxx_base/: base_type.hpp
examples/cgo-cxx/src/pb/: CMakeLists.txt  request_pb.cpp  request_pb.hpp  response_pb.cpp  response_pb.hpp
examples/cgo-pb/: build.sh
examples/cgo-stats/: build.sh
examples/cgo-stats-host/: build.sh
examples/go-web/: build.sh  note.md
tools/: protoc.sh
tools/protoc/: protoc.sh
tools/scripts/: go_cmd.sh
tools/stats/: statgrab.sh
(+40 files in other folders)
